# OpenCLUtilityLibrary

./: CMakeLists.txt  Context.cpp  Context.hpp  DeviceCriteria.cpp  DeviceCriteria.hpp  Exceptions.cpp  Exceptions.hpp  GarbageCollector.hpp  HelperFunctions.cpp  HelperFunctions.hpp  HistogramPyramids.cl  HistogramPyramids.clh  HistogramPyramids.cpp  HistogramPyramids.hpp  LICENSE  OpenCLManager.cpp  OpenCLManager.hpp  Reporter.hpp  RuntimeMeasurement.cpp  RuntimeMeasurement.hpp  RuntimeMeasurementManager.cpp  RuntimeMeasurementManager.hpp  example.cpp
CL/: OpenCL.hpp
CMake/: FindOpenCL.cmake  OpenCLUtilityLibraryConfig.cmake.in  OpenCLUtilityLibraryUse.cmake  OulConfig.hpp.in
testing/: CMakeLists.txt  OulTestFixture.cpp  OulTestFixture.hpp  TestFixture.cpp  TestFixture.hpp  histogramPyramidTests.cpp  tests.cpp
